--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@vercel/kv": "^0.2.4",
     "compression": "^1.7.5",
     "express": "^4.17.1",
     "helmet": "^8.0.0"
